making responsive cards

--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
               <span class="tech-badge">MySQL</span>
             </div>
             <div class="card-actions">
-              <a class="btn small outline" href="#" target="_blank" rel="noopener">Live Demo</a>
-              <a class="btn small" href="#" target="_blank" rel="noopener">Source Code</a>
+              <a class="btn small outline" href="#" target="_blank" rel="noopener">View in guthub</a>
+              
             </div>
           </div>
         </article>
@@ -122,8 +122,8 @@
               <span class="tech-badge">JS</span>
             </div>
             <div class="card-actions">
-              <a class="btn small outline" href="#" target="_blank" rel="noopener">Live Demo</a>
-              <a class="btn small" href="#" target="_blank" rel="noopener">Source Code</a>
+             <a class="btn small outline" href="#" target="_blank" rel="noopener">View in guthub</a>
+              
             </div>
           </div>
         </article>
