--- a/index.html
+++ b/index.html
@@ -222,17 +222,17 @@
           <h3>Reach out</h3>
           <p class="muted">Prefer GitHub or LinkedIn? Click below — or send a quick email.</p>
           <div class="socials">
-            <a href="https://github.com/" target="_blank" rel="noopener" aria-label="GitHub" class="social">
+            <a href="https://github.com/sal12321" target="_blank" rel="noopener" aria-label="GitHub" class="social">
               <!-- GitHub SVG -->
               <svg viewBox="0 0 24 24" class="social-icon" aria-hidden="true"><path d="M12 .5C5.7.5.9 5.3.9 11.6c0 4.7 3 8.7 7.2 10.1.5.1.7-.2.7-.5v-1.8c-2.9.6-3.5-1.2-3.5-1.2-.5-1.2-1.2-1.5-1.2-1.5-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1 1.7-.8 2.1-1.2-.2-.9-.6-1.4-1-1.7-2.3-.3-4.8-1.2-4.8-5.4 0-1.2.4-2.1 1.1-2.9-.1-.3-.5-1.6.1-3.4 0 0 .9-.3 3 1.1.9-.3 1.9-.5 2.9-.5 1 0 2 .2 2.9.5 2.1-1.4 3-1.1 3-1.1.6 1.8.2 3.1.1 3.4.7.8 1.1 1.7 1.1 2.9 0 4.2-2.5 5.1-4.8 5.4.4.4.7 1 .7 2v3c0 .3.2.6.7.5 4.2-1.4 7.2-5.4 7.2-10.1C23.1 5.3 18.3.5 12 .5z"/></svg>
             </a>
 
-            <a href="https://www.linkedin.com/" target="_blank" rel="noopener" aria-label="LinkedIn" class="social">
+            <a href="www.linkedin.com/in/aaqib-alam-50929a204" target="_blank" rel="noopener" aria-label="LinkedIn" class="social">
               <!-- LinkedIn SVG -->
               <svg viewBox="0 0 24 24" class="social-icon" aria-hidden="true"><path d="M4.98 3.5C4.98 4.9 3.87 6 2.5 6 1.1 6 0 4.9 0 3.5 0 2.1 1.1 1 2.5 1 3.87 1 4.98 2.1 4.98 3.5zM0 8h5v14H0zM7 8h4.8v2h.1c.7-1.2 2.5-2.4 5.1-2.4 5.4 0 6.4 3.6 6.4 8.3V22H18v-6.6c0-1.6 0-3.7-2.3-3.7-2.3 0-2.6 1.8-2.6 3.5V22H7V8z"/></svg>
             </a>
 
-            <a href="mailto:your.email@example.com" class="social" aria-label="Email">
+            <a href="mailto:your.aaqibalam291@example.com" class="social" aria-label="Email">
               <!-- Mail SVG -->
               <svg viewBox="0 0 24 24" class="social-icon" aria-hidden="true"><path d="M12 13L0 6v12a2 2 0 0 0 2 2h20a2 2 0 0 0 2-2V6l-12 7zM12 11L24 4H0l12 7z"/></svg>
             </a>
