--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="skills-grid">
           <!-- Programming -->
           <div class="skill-card card">
-            <div class="skill-icon">🧩</div>
+            <div class="skill-icon">🧑‍💻</div>
             <h3>Programming</h3>
             <p class="muted">Core fundamentals, algorithms and object oriented design.</p>
             <div class="skill-list">
@@ -150,7 +150,7 @@
 
           <!-- Web -->
           <div class="skill-card card">
-            <div class="skill-icon">🌐</div>
+            <div class="skill-icon">💻</div>
             <h3>Web Development</h3>
             <p class="muted">Modern responsive frontends and clean semantic HTML/CSS.</p>
             <div class="skill-list">
@@ -222,7 +222,7 @@
           <h3>Reach out</h3>
           <p class="muted">Prefer GitHub or LinkedIn? Click below — or send a quick email.</p>
           <div class="socials">
-            <a href="https://github.com/sal12321" target="_blank" rel="noopener" aria-label="GitHub" class="social">
+            <a href="https://github.com/sal12321" target="_blank" rel="noopener" aria-label="GitHub" class="social" >
               <!-- GitHub SVG -->
               <svg viewBox="0 0 24 24" class="social-icon" aria-hidden="true"><path d="M12 .5C5.7.5.9 5.3.9 11.6c0 4.7 3 8.7 7.2 10.1.5.1.7-.2.7-.5v-1.8c-2.9.6-3.5-1.2-3.5-1.2-.5-1.2-1.2-1.5-1.2-1.5-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1 1.7-.8 2.1-1.2-.2-.9-.6-1.4-1-1.7-2.3-.3-4.8-1.2-4.8-5.4 0-1.2.4-2.1 1.1-2.9-.1-.3-.5-1.6.1-3.4 0 0 .9-.3 3 1.1.9-.3 1.9-.5 2.9-.5 1 0 2 .2 2.9.5 2.1-1.4 3-1.1 3-1.1.6 1.8.2 3.1.1 3.4.7.8 1.1 1.7 1.1 2.9 0 4.2-2.5 5.1-4.8 5.4.4.4.7 1 .7 2v3c0 .3.2.6.7.5 4.2-1.4 7.2-5.4 7.2-10.1C23.1 5.3 18.3.5 12 .5z"/></svg>
             </a>
