--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- NAV -->
   <header class="navbar" id="navbar">
     <div class="container nav-inner">
-      <a class="brand" href="#hero" data-scroll>Mohammed Aaqib</a>
+      <a class="brand" href="#hero" data-scroll>Muhammad Aaqib</a>
 
       <nav id="navLinks" class="nav-links" aria-label="Primary">
         <a href="#about" data-scroll>About</a>
@@ -245,7 +245,7 @@
   <!-- FOOTER -->
   <footer class="footer">
     <div class="container footer-inner">
-      <p>&copy; <span id="year"></span> Mohammed Aaqib. All rights reserved.</p>
+      <p>&copy; <span id="year"></span> Muhammad Aaqib. All rights reserved.</p>
       <small class="muted">Built with plain HTML • CSS • JavaScript</small>
     </div>
   </footer>
@@ -253,6 +253,6 @@
   <!-- toast -->
   <div id="toast" class="toast" role="status" aria-live="polite" aria-atomic="true"></div>
 
-  <!-- <script src="script.js" defer></script> -->
+  <script src="script.js" defer></script>
 </body>
 </html>
