udating my email

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p class="lead">BTech | Java &amp; Web Developer — building thoughtful, well-tested software and clean UIs.</p>
         <div class="hero-ctas">
           <button class="btn primary" data-scroll-to="projects">View My Work</button>
-          <a class="btn outline" href="mailto:your.aaqibalam291@gmail.com">Email Me</a>
+          <a class="btn outline" href="mailto:aaqibalam290@gmail.com">Email Me</a>
         </div>
         <ul class="hero-meta">
           <li>Java · Spring Boot · JDBC</li>
